namespace Utils
{
    public abstract class Constants
    {
        public static string Character = "";
    
        public const string EnemyTag = "Enemy";
        public const string PlatformTag = "Platform";
        public const string TreeTag = "Tree";
        public const string GemTag = "Gem";
        public const string GroundTag = "Ground";
    
        
        public const string Player = "Player";
        public const string Dragon = "VRAZABARD";
    
        public const string LayerInteractable = "Interactable";
        public const string LayerEnemy = "Enemy";
    
        public const string AnimatorWalk = "walk";
        public const string AnimatorSpeed = "speed";
        public const string AnimatorJump = "jump";
        public const string AnimatorShoot = "shoot";
        public const string AnimatorDoubleJump = "doubleJump";
        public const string AnimatorPlayJump = "JumpStart_Normal_InPlace_SwordAndShield";
        public const string AnimatorLand = "land";
        public const string AnimatorIdleNoWeapon = "idleNoWeapon";
        public const string AnimatorIdleBattle = "idleBattle";
        
        public const string AnimatorAttack01 = "Attack01_SwordAndShiled";
        public const string AnimatorAttackCombo = "physicalAttackCombo";
        
        
        public const string Sword = "OHS03";
        public const string Weapon = "Weapon_L";
    }
}
